# smolagentsUI

./: .gitignore  pyproject.toml  test_ui.py
demo/: breast_cancer_data_analysis.py
src/smolagentsUI/: agent_wrapper.py  conversation_manager.py  server.py  utils.py
src/smolagentsUI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smolagentsUI/static/: app.js  style.css
src/smolagentsUI/templates/: index.html
