[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smolagentsUI"
version = "0.1.0"
description = "A lightweight Flask-based UI for smolagents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "simple-websocket>=0.10.0",
    "smolagents"
]
authors = [
  { name="Your Name", email="your.email@example.com" },
]

[tool.setuptools.packages.find]
where = ["src"]